# main.go
@@ -37,6 +37,8 @@ func main() {
 	r.GET("/autores", routes.GetAutores(database))
 	// configurar a rota para obter um autor por ID
 	r.GET("/autores/:id", routes.GetAutorID(database))
+	// configurar a rota para obter livros
+	r.GET("/livros", routes.GetLivros(database))
 	// Configura a rota para a documentação do swagger
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
